--- a/package.json
+++ b/package.json
@@ -82,7 +82,7 @@
 		"@cloudinary/react": "^1.13.1",
 		"@cloudinary/url-gen": "^1.21.0",
 		"@emailjs/browser": "^4.4.1",
-		"@headlessui/react": "^2.2.0",
+		"@headlessui/react": "^1.7.15"
 		"@heroicons/react": "^2.2.0",
 		"@paypal/react-paypal-js": "^8.8.2",
 		"@radix-ui/react-avatar": "^1.1.3",
